<resources>
    <string name="app_name">MyTaxPlanner</string>

    <string name="fragment_income">รายได้</string>
    <string name="fragment_file">เอกสาร</string>
    <string name="fragment_home">หน้าหลัก</string>
    <string name="fragment_tax">ลดหย่อน</string>
    <string name="fragment_suggest">แนะนำ</string>
    <string name="fragment_more">อื่นๆ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="single">โสด</string>
    <string name="married">สมรส</string>
    <string name="marital_status">สถานะภาพ</string>
    <string name="dad_status">บิดา</string>
    <string name="mom_status">มารดา</string>
    <string name="alive">มีชีวิต</string>
    <string name="dead">เสียชีวิต</string>
    <string name="confirm">ยืนยัน</string>
    <string name="sick">ทุพพลภาพ</string>
    <string name="notIncome">สมรสไม่มีรายได้</string>

    <string name="accept">ยืนยัน</string>
    <string name="type">ประเภท</string>
    <string name="income">รายได้</string>
    <string name="deduct">ลดหย่อน</string>
    <string name="deduct_type">ประเภทลดหย่อน</string>
    <string name="deduct_max">ลดหย่อนสูงสุด</string>
    <string name="withholding_tax">ภาษี ณ ที่จ่าย</string>
    <string name="choose_file">เลือกเอกสาร</string>
    <string name="file">เอกสาร :</string>
    <string name="normal">ปกติ</string>

    <string name="warning">แจ้งเตือน</string>
    <string name="income_describe">เงินได้พึงประเมิน คือรายได้ทั้งหมดหลังจากหักค่าใช้จ่ายแล้ว ที่ต้องนำมาเสียภาษีตามกฏหมาย</string>
    <string name="deduct_describe">ค่าลดหย่อน คือรายจ่ายที่สามารถนำมาใช้คำนวณเงินได้สุทธิที่จะนำไปคำนวณภาษีได้</string>
</resources>