<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="4dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    android:backgroundTint="@color/pink"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/textDeductType"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deduct_type"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/tvDeductType"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="test"
            app:layout_constraintTop_toTopOf="@id/textDeductType"
            app:layout_constraintStart_toEndOf="@id/textDeductType"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/textDeduct"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deduct"
            app:layout_constraintTop_toBottomOf="@id/tvDeductType"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceHeadline6" />
        <TextView
            android:id="@+id/tvDeduct"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="123456"
            app:layout_constraintTop_toBottomOf="@id/tvDeductType"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/textMaxDeduct"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvDeduct"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/deduct_max"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/tvMaxDeduct"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvDeduct"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            tools:text="123456"
            android:textAppearance="?attr/textAppearanceHeadline6" />

<!--        <ImageView-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:src="@drawable/ic_baseline_money_24"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:contentDescription="label for icon"-->
<!--            tools:ignore="HardcodedText" />-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="158dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>